# fmp_loader

./: .env.example  .gitignore  README.md  pyproject.toml
data/: delisted.json
fmp_loader/: __main__.py  main.py  model.py  repository.py
migration/: 000001_create_historical_dividend_table.down.sql  000001_create_historical_dividend_table.up.sql  000002_create_delisted_company_table.down.sql  000002_create_delisted_company_table.up.sql
sample_data/: aapl_dividend.json
tests/: test_fmp_loader.py
